# routes/contacts.js
@@ -1,13 +1,39 @@
+const express = require('express');
+const { body } = require('express-validator');
+const contactsController = require('../controllers/contacts');
+const contactValidate = require('../utilities/contact-validation');
+
 const router = require('express').Router();
 
-const contactsController = require('../controllers/contacts');
+// Validation middleware definition
+const createContactValidation = [
+  body('firstName')
+    .notEmpty()
+    .withMessage('Name is required')
+    .isString()
+    .withMessage('Name must be a string')
+    .trim()
+];
+
 
 // GET /feed/posts
 router.get('/', contactsController.getAll);
 // localhost:8080/contacts/
 router.get('/:id', contactsController.getSingle);
-// localhost:8080/contacts/
-router.post('/', contactsController.createContact);
+
+// router.post('/', contactsController.createContact);
+
+// router.post('/', createContactValidation, contactsController.createContact); // this one works
+
+// router.post('/', contactValidate.contactRules, contactsController.createContact);  // this one works too
+
+// Route definition with validation middleware and error handler
+router.post(
+    "/",
+    contactValidate.contactRules,
+    contactValidate.handleValidationErrors,
+    contactsController.createContact1
+);
 
 router.put('/:id', contactsController.updateContact);
 
